Tipo otro en retornos * En vez de licencias debe desplegar un campo de texto para especificar el tipo * Tambien en recompensas * Nuevo campo en la tabla reward, en el modelo y en el process_reward del controlador project * absolute al dia

--- a/view/css/superform.css
+++ b/view/css/superform.css
@@ -264,7 +264,7 @@ div.superform div.elements > ol > li.element.slider > div.contents > ul > li {
 /*    float: left;   width: 50%;    */
     border-bottom: 1px dashed #bcbdbf;
     border-right: 1px dashed #bcbdbf;
-    margin-left: -1px;
+/*    margin-left: -1px; */
     margin-bottom: -1px;
     padding: 0;
 }
