--- a/view/css/project/edit/supports.css
+++ b/view/css/project/edit/supports.css
@@ -84,16 +84,17 @@ body.project-edit div#main.supports div.superform li.element.editsupport div.chi
     min-height: 4em;
 }
 
-body.project-edit div#main.supports div.superform li.element.editsupport li.support-type > label {
+body.project-edit div#main.supports div.superform li.element.editsupport li.support-type div.contents {
     padding-left: 55px;
     background: none no-repeat 10px center;
     min-height: 32px;
     line-height: 32px;
 }
-body.project-edit div#main.supports div.superform li.element.editsupport li.support_task > label {
+
+body.project-edit div#main.supports div.superform li.element.editsupport li.support_task div.contents {
     background-image: url('/view/css/icon/m/task.png');
 }
 
-body.project-edit div#main.supports div.superform li.element.editsupport li.support_lend > label {
+body.project-edit div#main.supports div.superform li.element.editsupport li.support_lend div.contents {
     background-image: url('/view/css/icon/m/lend.png');
 }
