--- a/view/css/project/edit/rewards.css
+++ b/view/css/project/edit/rewards.css
@@ -131,7 +131,7 @@ body.project-edit div#main.rewards div.superform li.element.editindividual_rewar
 body.project-edit div#main.rewards div.superform li.element.editsocial_reward li.reward-type div.contents,
 body.project-edit div#main.rewards div.superform li.element.editindividual_reward li.reward-type div.contents {
     padding-left: 55px;
-    background-position: 10px top left;
+    background-position: 10px 10px;
     background-repeat: no-repeat;
     min-height: 32px;
     line-height: 32px;
