--- a/view/css/project/widget/projects.css
+++ b/view/css/project/widget/projects.css
@@ -11,7 +11,11 @@ div.widget.projects div.project {
     margin: 0 0 3.33% 3.33%;
     float: left;    
     padding: 0;
-    width: 270px;
+    width: 250px;
+}
+
+div.widget.projects div.project a.button{
+    padding: 0.4em 1em !important;
 }
 
 div.widget.projects div.project div.balloon {
