Dashboard profile, personal, access y formulario de proyecto * tocando estilos y vistas * superform apra la pagina de gestion de datos de acceso * nuevo elemento password para superform * botones quitar en rojo * en botones, el active aplicado al hover * arreglado el selector de proyectos

--- a/view/css/project/edit/profile.css
+++ b/view/css/project/edit/profile.css
@@ -18,8 +18,10 @@ body.project-edit div#main.userProfile div.superform li.element.webs li.element.
     padding-right: 1em;
 }
 
+body.project-edit div#main.userProfile div.superform li.element.webs li.element.web-accept input,
 body.project-edit div#main.userProfile div.superform li.element.webs li.element.web-remove input {
     margin: 0;
+    margin-right: 3px;
 }
 
 body.project-edit div#main.userProfile div.superform li.element.webs > div.children > div.elements > ol ol {
