--- a/view/css/common.css
+++ b/view/css/common.css
@@ -90,6 +90,13 @@ a.button:active {
     background: #60c1bf url('button/aqua-active.png') repeat-x top;    
 }
 
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+button:hover,
+a.button:hover {
+    background: #60c1bf url('button/aqua-active.png') repeat-x top;
+}
+
 input.red[type="submit"],
 input.red[type="reset"],
 button.red,
@@ -104,6 +111,13 @@ button.red:active,
 a.button.red:active {
     background: #e44133 url('button/red-active.png') repeat-x top;    
 } 
+
+input.red[type="submit"]:hover,
+input.red[type="reset"]:hover,
+button.red:hover,
+a.button.red:hover {
+    background: #e44133 url('button/red-active.png') repeat-x top;
+}
 
 input.green[type="submit"],
 input.green[type="reset"],
