--- a/view/css/dashboard/view.css
+++ b/view/css/dashboard/view.css
@@ -5,6 +5,10 @@ body.dashboard div#main {
     overflow: visible;
 }
 
+body.dashboard div#main div.widget {
+    margin-bottom: 20px;
+}
+
 body.dashboard div#sub-header {
     padding-bottom: 4em;
     margin-bottom: 0;
@@ -104,3 +108,32 @@ body.dashboard div#dashboard-menu li.option.active a:hover {
     color: #ffffff;
     background-color: #1db3b2;
 }
+
+
+/* El superform con el fondo blanco */
+body.dashboard div.superform {
+    background-color: #ffffff !important;
+    padding-top: 1px !important;
+    padding-left: 20px !important;
+    border: none !important;
+}
+
+/* Seccion proyectos */
+body.dashboard div#project-selector {
+    margin-bottom: 20px;
+    padding: 5px 10px;
+}
+
+body.dashboard div#project-selector label{
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16px;
+    margin-right: 5px;
+}
+
+body.dashboard div#project-selector select{
+    width: 770px;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
