Dashboard activity summary * La cantidad de aportes en la leyenda de meritocracia De paso: * retoco el margen de los widgets en discover * detallitos del lateral de necesidades * quito el borde al avatar

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -84,7 +84,7 @@ body.user-profile div#sub-header h2 img {
     position: absolute;    
     width: 55px;
     height: 55px;        
-    border: 1px solid #e2e2e2;
+/*    border: 1px solid #e2e2e2; */
     left: 0;
 }
 
