--- a/view/css/project/widget/schedule.css
+++ b/view/css/project/widget/schedule.css
@@ -1,51 +1,110 @@
 div.widget.project-schedule table {
-    border-collapse: collapse;
+    border-collapse: separate;
     width: 100%;
-    border-right: 1px solid #b2b2b2;    
+    cursor: default !important;
 }
 
 div.widget.project-schedule table td,
 div.widget.project-schedule table th {
-    border: 1px solid #b2b2b2;    
-    border-width: 1px 1px 1px 0;
+    border: none; 
     text-align: center;
     padding: .5em .1em;
     font-size: 11px;
+    width: 1.5em;
+    
 }
 
-div.widget.project-schedule thead th span {
+div.widget.project-schedule thead.days,
+div.widget.project-schedule thead.weeks {
     display: none;
 }
 
+div.widget.project-schedule thead.months tr th {
+    font-weight: normal;    
+    border: solid #e0e0e0;
+    border-width: 0 1px 0 0;
+}
+
+div.widget.project-schedule thead tr th:last-child {
+    border-right-width: 0;
+}
+
+div.widget.project-schedule thead tr th:first-child {   
+    display: none;
+}
+
+div.widget.project-schedule thead.months tr th span {
+    color: #808285;
+}
+
+
 div.widget.project-schedule thead tr > * {
-    border-top: none;        
+    border-top: none;
+}
+
+div.widget.project-schedule table tbody {
+    background: #f5f5f5;
+}
+
+div.widget.project-schedule table tbody tr {
+    border: solid #d3d3d3;
+    border-width: 1px 0;
+}
+
+div.widget.project-schedule table tbody th,
+div.widget.project-schedule table tbody td {
+    height: 5em;
+    vertical-align: middle;
+    padding: .5em;
 }
 
 div.widget.project-schedule table tbody th {
-    text-align: left;
-    border-left: none;
-    font-weight: normal;
-    text-transform: uppercase;
-    width: 20%;
-    padding: .5em;
+    display: none;
+}
+
+
+div.widget.project-schedule table tbody th strong {
+    font-size: 13px;
+    font-weight: bold;
+    display: block;
+    line-height: 13px;
+    width: 22px;
+}
+
+div.widget.project-schedule table tbody th span {
+    display: none;
+}
+
+
+div.widget.project-schedule table tbody td.on {
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    background-color: #d1edf1;
+    color: #00B1ca;
 }
 
 div.widget.project-schedule table tbody tr:nth-child(4n+1) td.on {
     background-color: #f9d3d4;
-}
-
-div.widget.project-schedule table tbody tr:nth-child(4n+2) td.on {
-    background-color: #d1edf1;
+    color: #BC202D;
 }
 
 div.widget.project-schedule table tbody tr:nth-child(4n+3) td.on {
     background-color: #d2f0f0;
+    color: #20B3B2;
 }
 
 div.widget.project-schedule table tbody tr:nth-child(4n+4) td.on {
     background-color: #c7c7e4;
+    color: #313B96;
 }
 
+
+
 div.widget.project-schedule table tbody td span {
-    display: none;
+    font-size: 11px;
+    font-weight: normal;
+    text-align: center;
+    height: 5em;
+    overflow: hidden;
 }
