--- a/view/css/user/widget/mates.css
+++ b/view/css/user/widget/mates.css
@@ -17,13 +17,13 @@ div.widget.user-mates .users ul > li.active {
 }
 
 div.widget.user-mates .users ul > li .user {
-    padding: 10px 10px 10px 60px;    
+    padding: 3px 10px 10px 57px;
 }
 
 div.widget.user-mates .users ul > li .avatar {
     position: absolute;
-    left: 0;
-    top: 10px;
+    left: 4px;
+    top: 8px;
     width: 50px;
     height: 50px;    
     text-align: center;
