--- a/view/css/user/widget/supporters.css
+++ b/view/css/user/widget/supporters.css
@@ -34,7 +34,7 @@ div.widget.user-supporters .supporters ul li h3,
 div.widget.user-supporters .supporters ul li h4,
 div.widget.user-supporters .supporters ul li h5,
 div.widget.user-supporters .supporters ul li h6 {    
-    margin: 0 0 .5em;
+    margin: 0;
 }
 
 
@@ -66,7 +66,7 @@ div.widget.user-supporters .supporters ul li dl dt.amount {
     right: 10px;
     top: 10px;
     margin: 0;
-    font-size: 11px;
+    font-size: 9px;
     color: #313b96;
 }
 
@@ -96,8 +96,8 @@ div.widget.user-supporters .supporters ul li dl dt.date {
 
 div.widget.user-supporters .supporters ul li dl dd.date {
     position: absolute;
-    right: 10px;
-    bottom: 15px;    
+    right: 8px;
+    bottom: 21px;
     color: #a6a8ab;
     font-size: 11px;
 }
